=================
Version 1.5.0.0
=================

New Features:
- Dialog editor and PlayerTextBox functions to support Dialogs has been added.
  - getDialog: Gets a Dialog object's data.
  - showDialog: Shows a Dialog with the configured parameters
- Achievement and Save systems implemented
- New button in Layout to hide the UI of the player.

Changes:
- Editor icons visible in the dropdown menu.
- PlayerTextBox.showText has an optional 4th argument that is the name of a Sound resource
  or a reference to a Resource object. If given it will play the Resource, as well as
  show the text.
- Player buttons have a tooltip.
- The first argument of PlayerTextBox showInput if now the default value. If you save an
  older project in 1.5.0+ make sure to check showInput uses if you used the old first
  parameter and change to showInput("", ...). Old Projects that aren't saved in 1.5.0+
  continue to work as they did before.
- Missing Resources show a warning in the Resource Tree.

Fixed Bugs:
- JS imports work even when the files are in different directories.

=================
Version 1.4.5.0
=================

New Features:
- PlayerMetronome: setBeatResource accepts now an array of Sound Resources.
- Metronomes can now use a set of Sound Resoures to play instead of only a single one.
- Custom Metronome SFX with multiple sound files can be registered by putting a
  folder of sound files into the sfx folder.
- New Settings:
  - Default device commands of PlayerMetronome.
  - Size of PlayerMetronome
  - Hide timeout of PlayerTextBox
- Keyboard shortcuts of PlayerNotification can be oerriden via setShortcut and
  the default shortcuts were changed to more easilly accessable keys, which now have
  their own settings bindings.

Changes:
- If no more sound emitters are found when trying to play a sound an there are
  paused emitters waiting, cannibalize the first waiting emitter to be able to play
  the sound.
- Added a new default SFX to the Metronome: Lub-Dub